@@ -132,6 +132,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10867: Remove python2.x try: except: imports for old cPickle from
+  multiprocessing. 
+
 - Issue #4959: inspect.formatargspec now works for keyword only arguments
   without defaults.
 
